<resources>
    <string name="app_name">Wizard Duel 2</string>
    <string name="button_spell3">Electric</string>
    <string name="button_spell4">Shield</string>
    <string name="button_spell5">Health</string>
    <!--these are the strings for login activity-->
    <string name="login">Login</string>
    <string name="create_acct">Create Account</string>
    <string name="play_guest">Play as Guest</string>
    <string name="enter_pass">Password</string>
    <string name="enter_user">Username</string>
    <string name="forgot_pass">Forgot password?</string>
    <!--these are the strings for create new user-->
    <string name="new_user">New Username:</string>
    <string name="new_pass">New Password:</string>
    <string name="repeat_pass">Enter password again:</string>
    <string name="new_email">Enter E-mail Address:</string>
    <string name="terms_and_conditions">I agree to the terms and conditions of creating a Wizard Duel 2(tm) account.</string>

    <!--this string exists to be an empty string-->
    <string name="NULL_STRING"> </string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>

    <!--strings for the home menu page-->
    <string name="stats_page">Stats</string>
    <string name="play">FIND MATCH</string>
    <string name="top_players">Top Players</string>
    <string name="spells">Spells</string>
    <string name="playoffline">PLAY OFFLINE</string>

    <string name="button_spell1">FIRE</string>
    <string name="button_spell2">ICE</string>
    <string name="cast_prompt">Your Move: </string>
    <string name="opponent_info">Opponent\'s Move:</string>
    <string name="spell1">1</string>
    <string name="spell2">2</string>
    <string name="spell3">3</string>
    <string name="spell4">4</string>
    <string name="spell5">5</string>
    <string name="opp_name">OPP USERNAME</string>
    <string name="name">USERNAME</string>
    <string name="profile">View Your Profile</string>
    <string name="change_pic">Change Picture</string>
    <string name="take_pic">Take a Picture</string>
    <string name="change_title">Change Your Title</string>
    <string name="level">Level: </string>
    <string name="elo">ELO: </string>
    <string name="go_home">Go Home</string>

    <!-- Onboarding Message -->
    <string name="first_screen_message">Welcome to the Wizard Duel 2 School of Magic! You can\'t battle without a wand - here\'s one to start. </string>
    <string name="second_screen_message">Display another message here about your app features</string>
    <string name="third_screen_message">Let users know the unique features offered by your app</string>

    <!--Facebook Strings-->
    <string name="facebook_app_id">554545271706688</string>
    <string name="fb_login_protocol_scheme">fb554545271706688</string>
    <string name="fb_post_button">Post on Facebook</string>
    <string name="fb_post_win_button">Post this Game</string>

    <!--Twitter Strings-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">lpvT9w7Uwq3Vk9eMYGyTbTW1D</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">J4FF94vEHdbOaC7OEhnkClfaol6tOymVLVm4g9F7rzCKQmj2pL</string>
    <string name="tweet_button">Tweet Your Stats</string>
    <string name="forfeit">6</string>
    <string name="taunt">Taunt</string>
    <string name="dialog_message">Are you sure you\'d like to forfeit? This will result in a loss.</string>
    <string name="dialog_title">Forfeit?</string>
    <string name="ok">Yes</string>
    <string name="logout_text">logout</string>
    <string name="tweet_win_button">Tweet this Game</string>

    <string name="test">test</string>
    <string name="time_text">Time Remaining:</string>
    <string name="req_name">Opponent User Name:</string>
    <string name="send_request">Send Request</string>
    <string name="villain">Dragon</string>
    <string name="tutorial">Tutorial</string>
    <string name="onboard_wand">This wand is incredibly weak, but it will grow more powerful as you win battles, unlocking new spells for you to cast!</string>
    <string name="onboard_stats">You can view your progress as an aspiring Wizard by tapping on the \"Spells\" button on the home page.</string>
    <string name="spellSchool">Don\'t bring a stick to a spell fight! Your wand is completely useless without spells loaded onto it. Select the \"Spells\" menu to equip spells before you go into any battle.</string>
    <string name="statTut">View a spell\'s effects by tapping on it. Then if you want to equip it, just assign it a slot!</string>
    <string name="custom">Custom Game</string>
    <string name="req_time">Time of Game</string>
    <string name="invited">You Have Been Invited</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="req_health">Health</string>
    <string name="req_mana">Mana</string>
    <string name="cuttime">Cut Time</string>
    <string name="donothing">Do Nothing</string>
    <string name="fireball">Fireball</string>
    <string name="iceshard">Ice Shard</string>
    <string name="lightningjolt">Lightning Jolt</string>
    <string name="manaburst">Mana Burst</string>
    <string name="quickheal">Quick Heal</string>
    <string name="shield">Shield</string>
    <string name="start_game">Start Game</string>
    <string name="game_screen_tut">You won\'t last long if you don\'t familiarize yourself with the Battlefield! Study the map below carefully so you can be prepared for your first battle.</string>
    <string name="step1"> 1) The Game Clock - You must act with quick intentions if you plan to survive! </string>
    <string name="step2">2) The last spell that you and your opponent have casted is displayed.</string>
    <string name="step3">3) Your health - you lose if this reaches 0! It  can be damaged or restored  by spells.</string>
    <string name="step4">4) Your mana bar - mana is expended when you cast a spell.</string>
    <string name="step5">5) Your active spells - tap these buttons to cast spells!</string>
    <string name="s32">You\'re almost at graduation! Before you can go out fighting, we need you to pass one final exam - defeat the invading target dummy and save the school!</string>
    <string name="dummy">Dummy</string>
    <string name="you">Noobie</string>

</resources>
