<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs307.crosenblatt.wizardduel2.OfflineGameBuilder">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/req_time"
                android:id="@+id/req_time" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_below="@+id/req_time"
                android:id="@+id/cust_time"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/req_health"
                android:id="@+id/req_health"
                android:layout_below="@+id/cust_time"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_below="@+id/req_health"
                android:id="@+id/cust_health"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/req_mana"
                android:id="@+id/req_mana"
                android:layout_below="@+id/cust_health"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_below="@+id/req_mana"
                android:id="@+id/cust_mana"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cuttime"
                android:layout_below="@+id/cust_mana"
                android:text="@string/cuttime"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/donothing"
                android:layout_below="@+id/cuttime"
                android:text="@string/donothing"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fireball"
                android:layout_below="@+id/donothing"
                android:text="@string/fireball"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iceshard"
                android:layout_below="@+id/fireball"
                android:text="@string/iceshard"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lightningjolt"
                android:layout_below="@+id/iceshard"
                android:text="@string/lightningjolt"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manaburst"
                android:layout_below="@+id/lightningjolt"
                android:text="@string/manaburst"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quickheal"
                android:layout_below="@+id/manaburst"
                android:text="@string/quickheal"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shield"
                android:layout_below="@+id/quickheal"
                android:text="@string/shield"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                android:layout_below="@+id/shield"
                android:id="@+id/send_req"/>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
