<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ss22-1"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/game_screen_tut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/ss22-2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/ss22-1"
        android:src="@drawable/gamescreen"
        />
    <TextView
        android:id="@+id/ss22-3"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layout_below="@id/ss22-2"
        android:text="@string/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/ss22-4"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/ss22-3"
        android:text="@string/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/ss22-5"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/ss22-4"
        android:text="@string/step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/ss22-6"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layout_below="@id/ss22-5"
        android:text="@string/step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/ss22-7"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/ss22-6"
        android:text="@string/step5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>