<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs307.crosenblatt.wizardduel2.PostGameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/game_status"
            android:text="@string/test"
            android:textSize="70dp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level"
            android:layout_below="@+id/game_status"
            android:text="@string/level"
            android:textSize="30dp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/elo"
            android:layout_below="@+id/level"
            android:text="@string/elo"
            android:textSize="30dp"
            android:gravity="center_horizontal"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_button"
            android:text="@string/fb_post_win_button"
            android:layout_below="@+id/elo"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tweet_button"
            android:text="@string/tweet_win_button"
            android:layout_below="@+id/post_button"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/go_home"
            android:text="@string/go_home"
            android:layout_below="@+id/tweet_button"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
