<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/enter_username_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user" />

        <EditText
            android:id="@+id/enter_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_username_textview"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/enter_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_username_edittext"
            android:text="@string/new_pass" />

        <EditText
            android:id="@+id/enter_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_password_textview"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/reenter_pass_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_password_edittext"
            android:text="@string/repeat_pass" />

        <EditText
            android:id="@+id/reenter_pass_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reenter_pass_textview"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/enter_email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reenter_pass_edittext"
            android:text="@string/new_email" />

        <EditText
            android:id="@+id/enter_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_email_textview"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <CheckBox
            android:id="@+id/terms_and_conditions_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_email_edittext"
            android:text="@string/terms_and_conditions" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms_and_conditions_checkBox"
            android:text="@string/create_acct" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finish_button"
            android:text="@string/cancel"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>