<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginBlue"
    android:backgroundTint="@color/colorLoginBlue">

    <Button
        android:id="@+id/login_button"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="437dp"
        android:layout_marginEnd="71dp"
        android:backgroundTint="@color/colorLoginRed"
        android:fadingEdge="horizontal|vertical"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="566dp"
        android:layout_marginEnd="121dp"
        android:backgroundTint="@color/colorLoginRed"
        android:fadingEdge="horizontal|vertical"
        android:text="@string/create_acct"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/guest_button"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="522dp"
        android:layout_marginEnd="71dp"
        android:backgroundTint="@color/colorLoginRed"
        android:text="@string/play_guest"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_textedit"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="361dp"
        android:layout_marginEnd="51dp"
        android:autofillHints="@string/enter_pass"
        android:ems="10"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_textedit"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="51dp"
        android:autofillHints="@string/enter_user"
        android:ems="10"
        android:hint="@string/enter_user"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>