<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs307.crosenblatt.wizardduel2.ProfileActivity"
    android:background="@color/colorLoginBlue">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/profile_picture"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/change_picture"
            android:layout_below="@+id/profile_picture"
            android:text="@string/change_pic"
            android:background="@drawable/rounded_button"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/take_picture"
            android:layout_below="@+id/change_picture"
            android:text="@string/take_pic"
            android:background="@drawable/rounded_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/change_title"
            android:layout_below="@+id/take_picture"
            android:text="@string/change_title"
            android:background="@drawable/rounded_button"/>
    </RelativeLayout>

</RelativeLayout>
