<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs307.crosenblatt.wizardduel2.CustomGamesOfferActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLoginBlue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/invited"
            android:textSize="50dp"
            android:id="@+id/accept_textview"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/accept"
            android:layout_below="@+id/accept_textview"
            android:id="@+id/accept_button"
            android:background="@drawable/rounded_button"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/reject"
            android:layout_below="@+id/accept_button"
            android:id="@+id/reject_button"
            android:background="@drawable/rounded_button"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
