<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="125dp"
        android:text="@string/first_screen_message"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"/>
    <ImageView
        android:id="@+id/wand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:src="@drawable/wand"
        />
    <TextView
        android:id="@+id/ob1text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wand"
        android:text="@string/onboard_wand"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        />
    <TextView
        android:id="@+id/ob1text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ob1text2"
        android:text="@string/onboard_stats"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        />
    <ImageView
        android:id="@+id/statspic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ob1text3"
        android:src="@drawable/stats"
        />



</RelativeLayout>

</ScrollView>

